--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "axios": "^0.25.0",
+    "date-fns": "^2.28.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-safe-area-context": "^3.3.2",
