main navigation done

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'SanarMobileChallenge' do
     :hermes_enabled => false
   )
 
+  pod 'RNScreens', :path => '../node_modules/react-native-screens'
+
   target 'SanarMobileChallengeTests' do
     inherit! :complete
     # Pods for testing
