--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.25.0",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.11.1"
+    "react-native-screens": "^3.11.1",
+    "react-native-vector-icons": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -30,6 +33,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.15",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
