--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native": "0.67.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-modalize": "^2.0.13",
     "react-native-reanimated": "^2.4.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-vector-icons": "^9.0.0",
