--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-flash-message": "^0.2.1",
-    "react-native-gesture-handler": "^2.2.0",
+    "react-native-gesture-handler": "2.1.1",
     "react-native-modalize": "^2.0.13",
     "react-native-reanimated": "^2.4.1",
     "react-native-render-html": "^6.3.4",
